localstack/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localstack-deployment
  namespace: tierlist-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: localstack
  template:
    metadata:
      labels:
        app: localstack
      annotations:
    spec:
      volumes:
        - name: localstack-data
          persistentVolumeClaim:
            claimName: localstack-data-pvc
        - name: localstack-persisted-data
          persistentVolumeClaim:
            claimName: localstack-persisted-pvc
      containers:
        - name: localstack
          image: grasasu/localstack-persist
          volumeMounts:
            - name: localstack-data
              mountPath: /var/lib/localstack
            - name: localstack-persisted-data
              mountPath: /pertisted-data
          ports:
            - containerPort: 4566
