localstack/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: localstack-service
  namespace: tierlist-api
spec:
  ports:
    - name: localstack-port
      port: 4566
      targetPort: 4566
  selector:
    app: localstack
  type: ClusterIP
