localstack/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localstack-ingress
  namespace: tierlist-api
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: image.tierlist.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: localstack-service
            port:
             number: 4566
  tls:
    - hosts:
      - image.tierlist.site
      secretName: localstack-cert
